--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "restate",
-    "slug": "restate",
+    "name": "1159",
+    "slug": "1159",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
